# optee_examples

./: .gitmodules
hello_world/host/: main.c
hello_world/ta/: hello_world_ta.c
tracer/: Android.mk  CMakeLists.txt
tracer/host/: Makefile  backtrace.c  backtrace.h  cfa_server.c  cfa_server.h  client.cpp  main.c  old_main.c  server.cpp  server.h  tracer_interface.c  tracer_interface.h
